@startuml

title __APRIORI's Class Diagram__\n

  package Algorithms.Apriori {
    class AprioriInstanceReader {
        - location : File
        + AprioriInstanceReader()
        {static} + loadInstance()
        {static} + loadInstance()
    }
  }
  

  package Algorithms.Apriori {
    class InstanceApriori {
        + transactions : ArrayList<TreeSet<String>>
        ~ labeledTransactions : ArrayList<TreeSet<String>>
        + InstanceApriori()
        + addTransaction()
        + addLabeledTransaction()
        + toString()
        + printTransactions()
    }
  }
  

  package Algorithms.Apriori {
    class Searcher {
        - supMin : int
        - confMin : double
        + rules : TreeMap<String, Double>
        + Ls : TreeMap<String, Integer>
        + Searcher()
        + search()
        - getFreqOfItemSet()
        - getFreqSets()
        - generateCandidates()
        - getAssRules()
        - getSubSets()
        {static} - setToString()
        {static} - stringToSet()
    }
  }
  

  package Algorithms.Apriori {
    class ItemComaparator {
        + compare()
    }
  }
  

  package Algorithms.Apriori {
    class rulesComparator {
        ~ map : TreeMap<String, Double>
        + rulesComparator()
        + compare()
    }
  }
  

  AprioriInstanceReader o-- InstanceApriori : instance
  Searcher o-- InstanceApriori : instance
  Searcher +-down- ItemComaparator
  Searcher +-down- rulesComparator
  ItemComaparator -up-|> Comparator
  rulesComparator -up-|> Comparator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
